# minireddit-on-vara

./: .gitignore  BUILD_SUCCESS.md  COMPLETE_GUIDE.md  Cargo.toml  DEPLOYMENT.md  FRONTEND_SETUP.md  README.md  SIGNLESS_DEBUG.md  SIGNLESS_STATUS.md  VERCEL_DEPLOYMENT.md  build-all.sh  build-metadata.sh  build.rs  mini_reddit_vara.idl  vibepost.idl
app/: Cargo.toml
app/src/: lib.rs
client/: Cargo.toml  build.rs
client/src/: lib.rs
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: .env  .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vercel.json
frontend/src/: App.scss  App.tsx  consts.ts  index.css
frontend/src/app/utils/: package.json
frontend/src/app/utils/src/: global.d.ts  lib.ts
frontend/src/components/: index.ts
frontend/src/components/comments/: CommentForm.scss  CommentForm.tsx  CommentItem.scss  CommentItem.tsx  CommentSection.scss  CommentSection.tsx  index.ts
frontend/src/components/layout/footer/: Footer.module.scss
frontend/src/components/layout/footer/socials/: Socials.module.scss
frontend/src/components/layout/header/: Header.module.scss
frontend/src/components/layout/header/logo/: Logo.tsx
frontend/src/components/loaders/api-loader/: ApiLoader.module.scss  ApiLoader.tsx
frontend/src/components/profile/: ProfileModal.scss  ProfileModal.tsx  index.ts
frontend/src/pages/: index.tsx
frontend/src/pages/home/: Home.tsx  home.scss
frontend/src/pages/mini-reddit/: MiniReddit.tsx  MiniReddit.tsx.backup  index.ts  mini-reddit.scss
frontend/src/pages/profile/: Profile.scss  Profile.tsx  index.ts
frontend/src/utils/: index.ts  ipfs.ts  session.ts
io/: Cargo.toml
io/examples/: generate_metadata.rs
io/src/: lib.rs
src/: lib.rs
state/: Cargo.toml  build.rs
state/src/: lib.rs
tests/: gtest.rs
