[workspace]
members = ["app", "client"]
resolver = "2"

[package]
name = "vibepost"
version = "0.1.0"
edition = "2021"

[dependencies]
vibepost-app = { path = "app" }

[build-dependencies]
sails-rs = { version = "0.8.0", features = ["wasm-builder"] }
sails-idl-gen = "0.8.0"
vibepost-app = { path = "app" }

[dev-dependencies]
vibepost = { path = ".", features = ["wasm-binary"] }
vibepost-client = { path = "client" }
sails-rs = { version = "0.8.0", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
