[workspace]
members = ["app", "client"]
resolver = "2"

[package]
name = "lumio-social"
version = "0.1.0"
edition = "2021"

[dependencies]
lumio-social-app = { path = "app" }

[build-dependencies]
sails-rs = { version = "0.8.0", features = ["wasm-builder"] }
sails-idl-gen = "0.8.0"
lumio-social-app = { path = "app" }

[dev-dependencies]
lumio-social = { path = ".", features = ["wasm-binary"] }
lumio-social-client = { path = "client" }
sails-rs = { version = "0.8.0", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
